# remotex

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.yml
config/projects/: hello.yml
examples/hello/: config.yml
examples/hello/projects/: hello.yml
src/: lib.rs  main.rs
src/domain/: auth.rs  mod.rs  project.rs  runtime.rs  settings.rs
src/web/: auth.rs  mod.rs  routes.rs  server.rs
