[package]
name = "remotex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
config = "*"

# Logging
log = "*"
env_logger = "0.9"
anyhow = "1"


# Async
tokio = { version = "1", features = ["full"] }

# Web
actix-web = "4"

# Cli
structopt = "0.3"


[dev-dependencies]
test-log = "*"